# goodwe_local_SEMS_bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  const.py  hacs.json  pyproject.toml  strings.json
custom_components/goodwe_local_sems_bridge/: __init__.py  aa55_proxy.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  modbus_unpacker.py  sensor.py  strings.json
custom_components/goodwe_local_sems_bridge/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_modbus_unpacker.py  test_sensor.py
