[project]
name = "goodwe-local-sems-bridge"
version = "0.5.0"
description = "Home Assistant custom integration: GoodWe Local SEMS Bridge"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "goodwe>=0.3.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
